Fix bug 467652 - Reproducible hang when retrieving remote ICS calendar. r=philipp